--- a/myapp/templates/myapp/endereco_detail.html
+++ b/myapp/templates/myapp/endereco_detail.html
@@ -23,7 +23,7 @@
 		
 		</div>
 		<div  >
-			<a href="{% url 'mapa' %}">	Mapa </a>
+			<a href="{% url 'mapa' cid=endereco.cidade uf=endereco.estado br='Brasil' %}">	Mapa </a>
 		</div>
 		
 	
